# tauri

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEPENDENTS.md  LICENSE  README.md  SECURITY.md  dependabot.yml  package.json  pnpm-workspace.yaml  renovate.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: Cloudflare.yml  NPM.yml  Node.yml  Rust.yml  bench.yml
.scripts/ci/: has-diff.sh  pack-cli.sh
Documentation/: index.html  modules.html
bench/: Cargo.toml  README.md
bench/Source/: build_benchmark_jsons.rs  run_benchmark.rs  utils.rs
core/tauri/: Cargo.toml
core/tauri-acl-schema/: Cargo.toml
core/tauri-acl-schema/Source/: main.rs
core/tauri-build/: Cargo.toml
core/tauri-build/Source/: acl.rs  lib.rs  manifest.rs  mobile.rs  static_vcruntime.rs
core/tauri-codegen/: Cargo.toml
core/tauri-codegen/Source/: context.rs  embedded_assets.rs  image.rs  lib.rs
core/tauri-config-schema/: Cargo.toml
core/tauri-macros/Source/: context.rs  lib.rs  menu.rs  mobile.rs  runtime.rs
core/tauri-plugin/: Cargo.toml
core/tauri-runtime-wry/: Cargo.toml
core/tauri-runtime-wry/Source/: lib.rs  undecorated_resizing.rs  webview.rs
core/tauri-runtime/Source/: lib.rs  monitor.rs  webview.rs  window.rs
core/tauri-utils/: Cargo.toml
core/tauri-utils/Source/: assets.rs  build.rs  config.rs  html.rs  io.rs  lib.rs  mime_type.rs  platform.rs  plugin.rs  resources.rs  tokens.rs
core/tauri/.scripts/: loop_qc.sh
core/tauri/Source/: app.rs  async_runtime.rs  error.rs  ios.rs  lib.rs  pattern.rs  plugin.rs  process.rs  state.rs
crates/tauri/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/tauri-build/: CHANGELOG.md  Cargo.toml  README.md
crates/tauri-build/Source/: acl.rs  lib.rs  manifest.rs  mobile.rs  static_vcruntime.rs
crates/tauri-bundler/: CHANGELOG.md  Cargo.toml  LICENSE  License_Apache.md  License_MIT.md  README.md
crates/tauri-bundler/Source/: bundle.rs  error.rs  lib.rs
crates/tauri-bundler/Source/bundle/: category.rs  common.rs  path_utils.rs  platform.rs  settings.rs  updater_bundle.rs
crates/tauri-bundler/Source/bundle/linux/: appimage.rs  debian.rs  freedesktop.rs  rpm.rs
crates/tauri-bundler/Source/bundle/linux/appimage/: mod.rs
crates/tauri-bundler/Source/bundle/linux/freedesktop/: mod.rs
crates/tauri-bundler/Source/bundle/macos/: app.rs  dmg.rs  icon.rs  ios.rs  sign.rs
crates/tauri-bundler/Source/bundle/macos/dmg/: mod.rs
crates/tauri-bundler/Source/bundle/windows/: msi.rs  nsis.rs  sign.rs  util.rs
crates/tauri-bundler/Source/bundle/windows/msi/: mod.rs  wix.rs
crates/tauri-bundler/Source/bundle/windows/nsis/: mod.rs
crates/tauri-bundler/Source/utils/: fs_utils.rs  http_utils.rs  mod.rs
crates/tauri-cli/: CHANGELOG.md  Cargo.toml  ENVIRONMENT_VARIABLES.md  README.md  build.rs  config.schema.json  metadata-v2.json  metadata.json  tauri.config.schema.json
crates/tauri-cli/Source/: add.rs  build.rs  bundle.rs  completions.rs  dev.rs  icon.rs  init.rs  inspect.rs  lib.rs  main.rs  remove.rs
crates/tauri-codegen/: CHANGELOG.md  Cargo.toml  README.md
crates/tauri-codegen/Source/: context.rs  embedded_assets.rs  image.rs  lib.rs
crates/tauri-driver/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/tauri-driver/Source/: cli.rs  main.rs  server.rs  webdriver.rs
crates/tauri-macos-sign/: CHANGELOG.md  Cargo.toml  README.md
crates/tauri-macos-sign/Source/: certificate.rs  keychain.rs  lib.rs  provisioning_profile.rs
crates/tauri-macos-sign/Source/keychain/: identity.rs
crates/tauri-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/tauri-macros/Source/: context.rs  lib.rs  menu.rs  mobile.rs  runtime.rs
crates/tauri-plugin/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin/Source/: lib.rs
crates/tauri-runtime/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/tauri-runtime-wry/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/tauri-runtime-wry/Source/: lib.rs  undecorated_resizing.rs  webview.rs
crates/tauri-runtime/Source/: lib.rs  webview.rs  window.rs
crates/tauri-schema-generator/: Cargo.toml  README.md  build.rs
crates/tauri-schema-worker/: .gitignore  Cargo.toml  package.json  wrangler.toml
crates/tauri-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/tauri-utils/Source/: assets.rs  build.rs  config.rs  html.rs  io.rs  lib.rs  mime_type.rs  platform.rs  plugin.rs  resources.rs  tokens.rs
crates/tauri-utils/Source/acl/: build.rs  capability.rs  identifier.rs  manifest.rs  mod.rs  resolved.rs  schema.rs  value.rs
crates/tauri-utils/Source/config/: parse.rs
crates/tauri-utils/Source/pattern/: isolation.rs
crates/tauri-utils/Source/platform/: starting_binary.rs
crates/tauri/Source/: app.rs  (+8 more)
examples/: README.md
examples/api/: .gitignore  README.md  package.json  unocss.config.js  vite.config.js
examples/api/src-tauri/tauri-plugin-sample/: Cargo.toml  api-iife.js  build.rs
examples/api/src-tauri/tauri-plugin-sample/Source/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
examples/api/src-tauri/tauri-plugin-sample/permissions/autogenerated/: reference.md
examples/commands/: README.md  commands.rs  main.rs  tauri.conf.json
examples/file-associations/: README.md  package.json
examples/helloworld/: README.md  main.rs  tauri.conf.json
examples/isolation/: README.md  main.rs  tauri.conf.json
examples/multiwebview/: README.md  main.rs  tauri.conf.json
examples/multiwindow/: README.md  main.rs  tauri.conf.json
examples/resources/: README.md  package.json
examples/run-iteration/: README.md  main.rs  tauri.conf.json
examples/splashscreen/: README.md  main.rs  tauri.conf.json
examples/state/: README.md  main.rs  tauri.conf.json
examples/streaming/: README.md  main.rs
examples/web/: .gitignore  package.json  svelte.config.js
supply-chain/: audits.toml  config.toml
tooling/api/: .gitignore  README.md  package.json  tsconfig.json
tooling/bench/: Cargo.toml
tooling/bundler/: .gitignore  Cargo.toml
tooling/cli/: Cargo.toml  README.md
tooling/macos-sign/: Cargo.toml
tooling/webdriver/: Cargo.toml
(+442 files in other folders)
