[package]
name = "tauri-bundler"
version = "2.1.0"
authors = [
	"George Burton <burtonageo@gmail.com>",
	"Tauri Programme within The Commons Conservancy",
]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license-file = "LICENSE"
keywords = ["bundle", "cargo", "tauri"]
repository = "https://github.com/tauri-apps/tauri"
description = "Wrap rust executables in OS-specific app bundles for Tauri"
edition = "2021"
rust-version = "1.77.2"
exclude = ["CHANGELOG.md", "/target", "rustfmt.toml"]

[dependencies]
tauri-utils = { version = "2.1.0", path = "../tauri-utils", features = [
	"resources",
] }
image = { version = "0.25.5" }
flate2 = { version = "1.0" }
anyhow = { version = "1.0" }
thiserror = { version = "2" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
strsim = { version = "0.11.1" }
tar = { version = "0.4.43" }
walkdir = { version = "2" }
handlebars = { version = "6" }
tempfile = { version = "3.14.0" }
log = { version = "0.4.22", features = ["kv"] }
dirs = { version = "5" }
os_pipe = { version = "1" }
ureq = { version = "2.12.1", default-features = false, features = [
	"socks-proxy",
] }
native-tls = { version = "0.2", optional = true }
hex = { version = "0.4" }
semver = { version = "1" }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
dunce = { version = "1" }
url = { version = "2" }
uuid = { version = "1", features = ["v4", "v5"] }
regex = { version = "1" }

[target."cfg(target_os = \"windows\")".dependencies]
bitness = { version = "0.4" }
windows-registry = "0.3.0"
glob = { version = "0.3" }

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.59"
features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"]

[target."cfg(target_os = \"macos\")".dependencies]
icns = { package = "tauri-icns", version = "0.1" }
time = { version = "0.3", features = ["formatting"] }
plist = { version = "1" }
tauri-macos-sign = { version = "2.0.1", path = "../tauri-macos-sign" }

[target."cfg(target_os = \"linux\")".dependencies]
heck = { version = "0.5" }
ar = { version = "0.9.0" }
md5 = { version = "0.7.0" }
rpm = { version = "0.16.0" }

[lib]
name = "tauri_bundler"
path = "src/lib.rs"

[features]
default = ["rustls"]
native-tls = ["ureq/native-tls"]
native-tls-vendored = ["native-tls", "native-tls/vendored"]
rustls = ["ureq/tls"]
