[package]
name = "tauri-macos-sign"
version = "2.0.1"
authors = ["Tauri Programme within The Commons Conservancy"]
license-file = "LICENSE"
keywords = ["codesign", "signing", "macos", "ios", "tauri"]
repository = "https://github.com/tauri-apps/tauri"
description = "Code signing utilities for macOS and iOS apps"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tempfile = { version = "3" }
x509-certificate = "0.24"
once-cell-regex = "0.2"
os_pipe = { version = "1" }
plist = { version = "1" }
rand = { version = "0.8" }
dirs-next = "2"
log = { version = "0.4.22", features = ["kv"] }
apple-codesign = "0.27"
chrono = "0.4"
p12 = "0.6"
